fixing bxslider asset bug and making headers left aligned on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -359,6 +359,10 @@
                     width: 100%;
                     margin-left: 0;
                 }
+
+                h2 {
+                  text-align: left;
+                }
                 margin-right: 0;
                 text-align: justify;
             }
